--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/1.9.19/aspectjweaver-1.9.19.jar"
                     </argLine>
                     <systemPropertyVariables>
-                        <allure.result.directory>target/allure-result</allure.result.directory>
+                        <allure.result.directory>target/allure-results</allure.result.directory>
                     </systemPropertyVariables>
                 </configuration>
                 <dependencies>
